@@ -1,5 +1,9 @@
 2014-12-02  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
 
+	* soap-client.el: Fix checkdoc issues.
+
+2014-12-02  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
+
 	* soap-client.el: Fix indentation and long lines.
 
 2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
